2011-12-13 belangeo <belangeo@gmail.com>

    * Added upsamp() function. Sampling rate conversion of a soundfile.
    - rev 797

2011-12-13 belangeo <belangeo@gmail.com>

    * Added copy() method to the PyoTableObject.
    - rev 796

2011-12-12 belangeo <belangeo@gmail.com>

    * Added reverse() method to the PyoTableObject.
    - rev 795

2011-12-11 belangeo <belangeo@gmail.com>

    * Added removeDC() method to the PyoTableObject.
    - rev 794

2011-12-07 belangeo <belangeo@gmail.com>

    * Added new object: Biquada. Biquadratric filter controlled with filter's coefficients.
    - rev 793

2011-12-05 belangeo <belangeo@gmail.com>

    * Added new function: distanceToSegment. Find the distance from a point to a line or line segment.
    - rev 790

2011-11-29 belangeo <belangeo@gmail.com>

    * Added new object: Iter. Triggers iterate over a list of user-defined values.
    - rev 784

2011-11-26 belangeo <belangeo@gmail.com>

    * Added new object: Vectral. Performs magnitude smoothing between successive frames.
    - rev 782

2011-11-23 belangeo <belangeo@gmail.com>

    * Added server's attribute : globalseed. An int used as the seed by random objects. Can be changed multiple times inside a script.
    - rev 778

2011-11-22 belangeo <belangeo@gmail.com>

    * Added new object: RandDur. Recursive time varying pseudo-random generator.
    - rev 776

2011-11-22 belangeo <belangeo@gmail.com>

    * Added new object: Timer. Reports elpased time between two triggers.
    - rev 772

2011-11-15 belangeo <belangeo@gmail.com>

    * Added mouse callback to SndTable.view method to allow simple scrubbing.
    - rev 763

2011-11-09 belangeo <belangeo@gmail.com>

    * midiToHz and midiToTranspo now accept list or tuple in input.
    - rev 759

2011-11-04 belangeo <belangeo@gmail.com>

    * Snap takes choice on more than one octave.
    - rev 754

2011-10-27 belangeo <belangeo@gmail.com>

    * Added new object: MToF. Midi to frequency conversion.
    - rev 748
